--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Stick&display=swap" rel="stylesheet">
     <!-- Logo  -->
-    <link rel="icon" href="/lightbulb.png" type="image/icon type">
-    <title>Quiz</title>
+    <link rel="icon" href="/edify.png" type="image/icon type">
+    <title>EDIFY</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
