Added: Nothing to see here section

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Stick&display=swap" rel="stylesheet">
     <!-- Logo  -->
-    <link rel="icon" href="/edify.png" type="image/icon type">
+    <link rel="icon" href="/vector-purple.png" type="image/icon type">
     <title>EDIFY</title>
   </head>
   <body>
